--- a/exercises/06-Hero-Section-And-Three-Boxes/index.html
+++ b/exercises/06-Hero-Section-And-Three-Boxes/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<title>06 Hero Section And 3 Boxes</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-	<title>06 Hero Section And 3 Boxes</title>
-</head>
-
-<body>
-
-</body>
-
+	<body>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12 p-4 bg-light">
+					<h1>Hello world!</h1>
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus exercitationem culpa consequatur, dolores dolorum
+						quaerat quia aut, voluptas voluptatibus itaque ipsum numquam quae dolorem laudantium laboriosam ad ipsam laborum dolor.0
+					</p>
+					<button type="button" class="btn btn-primary">Learn more ></button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-4 p-4">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit obcaecati praesentium temporibus, ut corrupti excepturi
+						architecto officiis magni doloribus similique id debitis dicta cumque nulla voluptates, magnam labore commodi!
+					</p>
+					<button type="button" class="btn btn-outline-dark">View details</button>
+				</div>
+				<div class="col-4 p-4">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit obcaecati praesentium temporibus, ut corrupti excepturi
+						architecto officiis magni doloribus similique id debitis dicta cumque nulla voluptates, magnam labore commodi!
+					</p>
+					<button type="button" class="btn btn-outline-dark">View details</button>
+				</div>
+				<div class="col-4 p-4">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit obcaecati praesentium temporibus, ut corrupti excepturi
+						architecto officiis magni doloribus similique id debitis dicta cumque nulla voluptates, magnam labore commodi!
+					</p>
+					<button type="button" class="btn btn-outline-dark">View details</button>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
